--- a/src/app/components/main-view/main-view.component.scss
+++ b/src/app/components/main-view/main-view.component.scss
@@ -1,6 +1,9 @@
 .main-view {
   position: relative;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
   overflow: hidden;
 
   .header {
@@ -25,8 +28,14 @@
     }
   }
 
+  ::ng-deep .mat-mdc-tab-group {
+    flex: 1;
+    min-height: 0;
+  }
+
   ::ng-deep .mat-mdc-tab-body-wrapper {
-    height: calc(100vh - 49px - 60px);
+    flex: 1;
+    min-height: 0;
     overflow-y: auto;
   }
 }
